// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GrayButton /> renders correctly 1`] = `
.c0 {
  min-width: 100px;
  padding: 0 1rem;
  border: none;
  border-radius: 3px;
  height: 40px;
  background-color: #38A9DB;
  color: #FFFFFF;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  background-color: #D1D1D1;
  color: #070707;
  opacity: 0.8;
}

.c0:disabled {
  opacity: 0.3;
  background-color: #D1D1D1;
}

.c0:hover:not(:disabled) {
  background-color: #024A8F;
  cursor: pointer;
}

.c0:hover:not(:disabled) {
  opacity: 1;
  background-color: #D1D1D1;
}

<button
  className="c0"
/>
`;

exports[`<PrimaryButton /> renders correctly 1`] = `
.c0 {
  min-width: 100px;
  padding: 0 1rem;
  border: none;
  border-radius: 3px;
  height: 40px;
  background-color: #38A9DB;
  color: #FFFFFF;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
}

.c0:disabled {
  opacity: 0.3;
  background-color: #D1D1D1;
}

.c0:hover:not(:disabled) {
  background-color: #024A8F;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`<PrimaryButton /> renders when disabled 1`] = `
.c0 {
  min-width: 100px;
  padding: 0 1rem;
  border: none;
  border-radius: 3px;
  height: 40px;
  background-color: #38A9DB;
  color: #FFFFFF;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
}

.c0:disabled {
  opacity: 0.3;
  background-color: #D1D1D1;
}

.c0:hover:not(:disabled) {
  background-color: #024A8F;
  cursor: pointer;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`<PrimaryButton /> renders with a small prop 1`] = `
.c0 {
  min-width: 100px;
  padding: 0 1rem;
  border: none;
  border-radius: 3px;
  height: 30px;
  background-color: #38A9DB;
  color: #FFFFFF;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
}

.c0:disabled {
  opacity: 0.3;
  background-color: #D1D1D1;
}

.c0:hover:not(:disabled) {
  background-color: #024A8F;
  cursor: pointer;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`<SecondaryButton /> renders correctly 1`] = `
.c0 {
  min-width: 100px;
  padding: 0 1rem;
  border: none;
  border-radius: 3px;
  height: 40px;
  background-color: #38A9DB;
  color: #FFFFFF;
  -webkit-transition: opacity 100ms ease-out;
  transition: opacity 100ms ease-out;
  background-color: #FFFFFF;
  border: 1px solid #38A9DB;
  color: #38A9DB;
}

.c0:disabled {
  opacity: 0.3;
  background-color: #D1D1D1;
}

.c0:hover:not(:disabled) {
  background-color: #024A8F;
  cursor: pointer;
}

.c0:hover:not(:disabled) {
  background-color: #FFFFFF;
  border: 1px solid #024A8F;
  color: #024A8F;
}

<button
  className="c0"
/>
`;

exports[`renders correctly with collapse prop 1`] = `
.c0 {
  display: block;
  color: #FFFFFF;
  font-size: 16px;
  font-weight: 200;
  width: 30px;
  margin: 0;
  margin-top: 20px;
  margin-bottom: auto;
  margin-right: 20px;
  padding: 0.4em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c0:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c0::before {
  content: ' 



































































@-webkit-keyframes dxgQlt{from{-webkit-transform:scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
}

<button
  className="c0"
/>
`;

exports[`renders correctly with disabled prop 1`] = `
.c0 {
  display: block;
  color: #FFFFFF;
  font-size: 0.8em;
  font-weight: 200;
  width: 100%;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.8em;
  padding-top: 0.9em;
  padding-bottom: 0.85em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #D1D1D1;
  background-color: #D1D1D1;
}

.c0:hover {
  cursor: not-allowed;
  color: #FFFFFF;
  background-color: #D1D1D1;
  border-color: #D1D1D1;
}

.c0::before {
  content: '';
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`renders correctly with expand prop 1`] = `
<button
  className=""
/>
`;

exports[`renders correctly with hidden prop 1`] = `
.c0 {
  display: none;
  color: #FFFFFF;
  font-size: 0.8em;
  font-weight: 200;
  width: 100%;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.8em;
  padding-top: 0.9em;
  padding-bottom: 0.85em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c0:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c0::before {
  content: '';
}

<button
  className="c0"
  hidden={true}
/>
`;

exports[`renders correctly with no props 1`] = `
.c0 {
  display: block;
  color: #FFFFFF;
  font-size: 0.8em;
  font-weight: 200;
  width: 100%;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.8em;
  padding-top: 0.9em;
  padding-bottom: 0.85em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c0:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c0::before {
  content: '';
}

<button
  className="c0"
/>
`;

exports[`renders correctly with secondary prop 1`] = `
.c0 {
  display: block;
  color: #38A9DB;
  font-size: 0.8em;
  font-weight: 200;
  width: 100%;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.8em;
  padding-top: 0.9em;
  padding-bottom: 0.85em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #FFFFFF;
}

.c0:hover {
  cursor: pointer;
  color: #2670AE;
  background-color: #FFFFFF;
  border-color: #2670AE;
}

.c0::before {
  content: '';
}

<button
  className="c0"
/>
`;

exports[`renders correctly with small prop 1`] = `
.c0 {
  display: block;
  color: #FFFFFF;
  font-size: 0.8em;
  font-weight: 200;
  width: 100%;
  margin: 0;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-right: 0;
  padding: 0.8em;
  padding-top: 0.6em;
  padding-bottom: 0.55em;
  border: 2px solid;
  border-radius: 3px;
  border-color: #38A9DB;
  background-color: #38A9DB;
}

.c0:hover {
  cursor: pointer;
  color: #FFFFFF;
  background-color: #2670AE;
  border-color: #2670AE;
}

.c0::before {
  content: '';
}

<button
  className="c0"
/>
`;
